testament/tests/shouldfail/tline.nim
discard """
  errormsg: "undeclared identifier: 'undeclared'"
  line: 10
  column: 6
"""

# test should fail because the line directive is wrong
echo undeclared
